--- a/package.json
+++ b/package.json
@@ -18,12 +18,18 @@
   "homepage": "https://github.com/subatadhal/reactAxios#readme",
   "dependencies": {
     "axios": "^0.15.3",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "classnames": "^2.2.5",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-image-gallery": "^0.8.0",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "style-loader": "^0.17.0",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
   }
